test/files/neg/t8015-ffb.check
t8015-ffb.scala:10: warning: side-effecting nullary methods are discouraged: suggest defining as `def w()` instead
  def w = { x
      ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
